--- a/pandasai/requirements.txt
+++ b/pandasai/requirements.txt
@@ -1,2 +1,2 @@
-dotenv
+python-dotenv
 pandasai[google-ai,google-sheet,excel,modin,polars,langchain,numpy,ggplot,seaborn,plotly,statsmodels,scikit-learn,streamlit,ibm-watsonx-ai]
